--- a/src/app/msf-loading/msf-loading.component.html
+++ b/src/app/msf-loading/msf-loading.component.html
@@ -3,4 +3,5 @@
         Cancel
     <mat-icon  class="close-icon">close</mat-icon> 
     </button>
+    <!-- <mat-spinner class="loading-spinner"></mat-spinner> -->
 </div>
