--- a/src/app/web-services/web-services.component.css
+++ b/src/app/web-services/web-services.component.css
@@ -22,12 +22,6 @@ div {
     height: 45%;
 }
 
-.mat-horizontal-content-container {
-    overflow: hidden;
-    padding: 0 0 0 0 !important;
-    width: 100%;
-}
-
 .mat-checkbox-label {
     color: white;
     font-size: 14px;
@@ -60,17 +54,17 @@ div {
     width: 45%;
 }
 
-.box-container {
+/* .box-container {
     display: block;
     flex-wrap: wrap;
     max-height: 350px;
-    height: calc(100% - 75px);
+    /* height: calc(100% - 75px); 
     overflow-y: scroll;
     margin-top: 10px;
     width: 90%;
     padding-left: 10px;
-    background-color: #1e1e1e;
-}
+    background-color: #1e1e1e; 
+}*/
 
 .container-arg {
     overflow-y: scroll;
@@ -95,22 +89,24 @@ div {
     color: white;
 }
 
-.selected-containers {
+/* .selected-containers {
     height: 100px;
     max-height: 100px;
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
-}
+} */
 
 .box-titles {
-    color: white !important;
+    color: white !important;    
 }
 
 mat-select {
     background-color: #1e1e1e;
     width: 100%;
-    height: 35px;
+    margin-right: 15px;
+    font-weight: lighter;
+    border: 1px solid #3d3d3d
 }
 
 .mat-select-panel {
@@ -125,31 +121,30 @@ mat-select {
     display: none;
 }
 
-.search-input .mat-form-field-appearance-legacry .mat-form-field-underline {
+/* .search-input .mat-form-field-appearance-legacry .mat-form-field-underline {
     display: none;
-}
+} */
 
-.mat-form-field {
+/* .mat-form-field {
     height: 10px;
-}
+} */
 
 .mat-select-value {
     line-height: 35px;
     color: #01abec;
-    padding-left: 10px;
 }
 
 .mat-icon {
     line-height: 10px;
 }
 
-.search-input {
+/* .search-input {
     color: white !important;
     width: 85% !important;
     padding-left: 10px !important;
     font-size: 14px !important;
     line-height: 35px !important;
-}
+} */
 
 .select-column {
     width: 15% !important;
@@ -208,6 +203,7 @@ textarea.mat-input-element {
 
 .draggable-list {
     max-width: 100%;
+    width: 100%;
     display: block;
     overflow: hidden;
     background-color: #232323;
@@ -215,7 +211,10 @@ textarea.mat-input-element {
 
 .draggable-box {
     cursor: move;
-    background-color: #232323;
+    background-color: #232323;    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cdk-drag-preview {
@@ -231,7 +230,6 @@ textarea.mat-input-element {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.draggable-box:last-child {}
 
 .draggable-list.cdk-drop-list-dragging .draggable-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
